--- a/CreditRisk.ipynb
+++ b/CreditRisk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"cs-training.csv\", index_col = 0)\n",
+    "df = pd.read_csv(\"~/Stats243Project/Data/cs-training.csv\", index_col = 0)\n",
     "print(len(df))\n",
     "df = df.dropna()\n",
     "print(len(df))\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85.44373421739455 83.43138114569696\n",
-      "85.49241455143037 83.98570707600497\n"
+      "85.44373421739633 83.43138114569865\n",
+      "85.49241455143215 83.98570707600669\n"
      ]
     }
    ],
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.08943248579736342 0.31403573504498794\n",
-      "0.08111160118850445 0.26534977342014043\n"
+      "0.08939710399711638 0.31580477039617605\n",
+      "0.08139228896473245 0.2668209060192212\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -171,30 +171,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50\n",
-      "10073/10073 [==============================] - 7s 636us/step - loss: 0.3964\n",
-      "Epoch 2/50\n",
-      "10073/10073 [==============================] - 6s 641us/step - loss: 0.2515\n",
-      "Epoch 3/50\n",
-      "10073/10073 [==============================] - 7s 676us/step - loss: 0.2556\n",
-      "Epoch 4/50\n",
-      "10073/10073 [==============================] - 7s 686us/step - loss: 0.2515\n",
-      "Epoch 5/50\n",
-      "10073/10073 [==============================] - 7s 690us/step - loss: 0.2515\n",
-      "Epoch 6/50\n",
-      "10073/10073 [==============================] - 7s 660us/step - loss: 0.2522\n",
-      "Epoch 7/50\n",
-      "10073/10073 [==============================] - 7s 674us/step - loss: 0.2515\n",
-      "Epoch 8/50\n",
-      " 7917/10073 [======================>.......] - ETA: 1s - loss: 0.2544"
+      "Epoch 1/50\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-16 14:52:06.902127: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10073/10073 [==============================] - 9s 893us/step - loss: 13.1984\n",
+      "Epoch 2/50\n",
+      "10073/10073 [==============================] - 9s 885us/step - loss: 0.2516\n",
+      "Epoch 3/50\n",
+      "10073/10073 [==============================] - 9s 890us/step - loss: 0.2516\n",
+      "Epoch 4/50\n",
+      "10073/10073 [==============================] - 9s 898us/step - loss: 0.2515\n",
+      "Epoch 5/50\n",
+      "10073/10073 [==============================] - 9s 884us/step - loss: 0.2516\n",
+      "Epoch 6/50\n",
+      "10073/10073 [==============================] - 9s 892us/step - loss: 0.2516\n",
+      "Epoch 7/50\n",
+      "10073/10073 [==============================] - 9s 895us/step - loss: 0.2516\n",
+      "Epoch 8/50\n",
+      "10073/10073 [==============================] - 9s 885us/step - loss: 0.2515\n",
+      "Epoch 9/50\n",
+      "10073/10073 [==============================] - 9s 886us/step - loss: 0.2516\n",
+      "Epoch 10/50\n",
+      "10073/10073 [==============================] - 9s 897us/step - loss: 0.2516\n",
+      "Epoch 11/50\n",
+      "10073/10073 [==============================] - 9s 891us/step - loss: 0.2516\n",
+      "Epoch 12/50\n",
+      "10073/10073 [==============================] - 9s 907us/step - loss: 0.2516\n",
+      "Epoch 13/50\n",
+      "10073/10073 [==============================] - 9s 893us/step - loss: 0.2516\n",
+      "Epoch 14/50\n",
+      "10073/10073 [==============================] - 9s 892us/step - loss: 0.2516\n",
+      "Epoch 15/50\n",
+      "10073/10073 [==============================] - 10s 980us/step - loss: 0.2516\n",
+      "Epoch 16/50\n",
+      "10073/10073 [==============================] - 10s 947us/step - loss: 0.2515\n",
+      "Epoch 17/50\n",
+      "10073/10073 [==============================] - 9s 917us/step - loss: 0.2515\n",
+      "Epoch 18/50\n",
+      "10073/10073 [==============================] - 9s 886us/step - loss: 0.2515\n",
+      "Epoch 19/50\n",
+      "10073/10073 [==============================] - 9s 890us/step - loss: 0.2516\n",
+      "Epoch 20/50\n",
+      "10073/10073 [==============================] - 9s 885us/step - loss: 0.2516\n",
+      "Epoch 21/50\n",
+      "10073/10073 [==============================] - 9s 890us/step - loss: 0.2515\n",
+      "Epoch 22/50\n",
+      "10073/10073 [==============================] - 9s 897us/step - loss: 0.2515\n",
+      "Epoch 23/50\n",
+      "10073/10073 [==============================] - 9s 892us/step - loss: 0.2515\n",
+      "Epoch 24/50\n",
+      "10073/10073 [==============================] - 9s 889us/step - loss: 0.2516\n",
+      "Epoch 25/50\n",
+      "10073/10073 [==============================] - 9s 890us/step - loss: 0.2515\n",
+      "Epoch 26/50\n",
+      "10073/10073 [==============================] - 9s 908us/step - loss: 0.2516\n",
+      "Epoch 27/50\n",
+      "10073/10073 [==============================] - 9s 886us/step - loss: 0.2516\n",
+      "Epoch 28/50\n",
+      "10073/10073 [==============================] - 9s 883us/step - loss: 0.2515\n",
+      "Epoch 29/50\n",
+      "10073/10073 [==============================] - 9s 884us/step - loss: 0.2515\n",
+      "Epoch 30/50\n",
+      "10073/10073 [==============================] - 9s 887us/step - loss: 0.2516\n",
+      "Epoch 31/50\n",
+      "10073/10073 [==============================] - 9s 880us/step - loss: 0.2516\n",
+      "Epoch 32/50\n",
+      "10073/10073 [==============================] - 9s 883us/step - loss: 0.2516\n",
+      "Epoch 33/50\n",
+      "10073/10073 [==============================] - 9s 886us/step - loss: 0.2516\n",
+      "Epoch 34/50\n",
+      "10073/10073 [==============================] - 9s 884us/step - loss: 0.2516\n",
+      "Epoch 35/50\n",
+      "10073/10073 [==============================] - 9s 890us/step - loss: 0.2515\n",
+      "Epoch 36/50\n",
+      "10073/10073 [==============================] - 9s 885us/step - loss: 0.2516\n",
+      "Epoch 37/50\n",
+      "10073/10073 [==============================] - 9s 884us/step - loss: 0.2516\n",
+      "Epoch 38/50\n",
+      "10073/10073 [==============================] - 9s 879us/step - loss: 0.2515\n",
+      "Epoch 39/50\n",
+      "10073/10073 [==============================] - 9s 883us/step - loss: 0.2515\n",
+      "Epoch 40/50\n",
+      "10073/10073 [==============================] - 9s 903us/step - loss: 0.2516\n",
+      "Epoch 41/50\n",
+      "10073/10073 [==============================] - 9s 889us/step - loss: 0.2516\n",
+      "Epoch 42/50\n",
+      "10073/10073 [==============================] - 9s 906us/step - loss: 0.2516\n",
+      "Epoch 43/50\n",
+      "10073/10073 [==============================] - 9s 892us/step - loss: 0.2515\n",
+      "Epoch 44/50\n",
+      "10073/10073 [==============================] - 9s 890us/step - loss: 0.2516\n",
+      "Epoch 45/50\n",
+      "10073/10073 [==============================] - 9s 896us/step - loss: 0.2516\n",
+      "Epoch 46/50\n",
+      "10073/10073 [==============================] - 9s 891us/step - loss: 0.2516\n",
+      "Epoch 47/50\n",
+      "10073/10073 [==============================] - 9s 884us/step - loss: 0.2516\n",
+      "Epoch 48/50\n",
+      "10073/10073 [==============================] - 9s 886us/step - loss: 0.2516\n",
+      "Epoch 49/50\n",
+      "10073/10073 [==============================] - 9s 886us/step - loss: 0.2516\n",
+      "Epoch 50/50\n",
+      "10073/10073 [==============================] - 9s 908us/step - loss: 0.2516\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fc7b43e3fd0>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -212,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.074047506 0.074047506\n"
+      "0.075107925 0.075107925\n"
      ]
     }
    ],
@@ -242,7 +352,7 @@
    "hash": "3067ead486e059ec00ffe7555bdb889e6e264a24dc711bf108106cc7baee8d5d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,9 +366,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
